Fix video problem on iOS + set video as banner

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -82,17 +82,30 @@ button {
 
 .video-container {
   width: 65%;
+  position: relative;
   
-  // aspect-ratio: 3/1;
-  // object-fit: cover;
-  // height: 100%;
-  // width: auto;
-  // overflow: hidden;
-  // display: flex;
-  // align-items: center;
+  aspect-ratio: 3/1;
+  object-fit: cover;
+  height: 100%;
+  width: auto;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+
+  &::after {
+    content: "";
+    position: absolute;
+    background-color: #0000009a;
+    inset: 0;
+    z-index: 70;
+  }
 
   @include tablet-max {
     width: 100%;
+  }
+
+  @include mobile {
+    aspect-ratio: 2/1;
   }
 
   video {
@@ -108,6 +121,17 @@ button {
     left: -10px;
     z-index: 0;
   }
+
+  .title-container {
+    position: absolute;
+    z-index: 99;
+    max-width: 1440px;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 15%;
+    margin: 10px; 
+  }
 }
 
 .main-title {
@@ -116,7 +140,12 @@ button {
   margin: 0px;
   max-width: 600px;
   font-weight: bold;
-  margin: 60px 0;
+  margin: 25px 0;
+
+  @include mobile {
+    font-size: 2rem;
+    margin: 10px 0;
+  }
 }
 
 .section-title-wrapper {
